--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ security.jwt.token.secret-key=f560ffd93ad2087077bc0dec2c9a68c09b87201a6ad4c627a7
 
 # JWT token expiration length set to 1 day (86400000 milliseconds)
 security.jwt.token.expire-length=86400000
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=trace
+
+spring.jpa.properties.org.hibernate.envers.default_schema=aud
